--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -68,3 +68,26 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist/
+          
+  ServiceNowDevOpsChange:
+          # jobs that must complete successfully before this job will run
+          needs: release-build
+          # type of machine to run the job on
+          runs-on: ubuntu-latest
+          name: 'ServiceNow DevOps Change'
+          steps:
+            - name: ServiceNow Change
+              # Ensure to update to the latest version of the custom action, for e.g. ServiceNow/servicenow-devops-change@v5.1.0
+              uses: ServiceNow/servicenow-devops-change@VERSION
+              with:
+              # Devops Integration Token
+                devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+              # ServiceNow Instance URL
+                instance-url: ${{ secrets.SN_INSTANCE_URL }}
+              # Orchestration Tool Id
+                tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+              # GitHub Context
+                context-github: ${{ toJSON(github) }}
+              # Display Name of the Job
+                job-name: 'ServiceNow DevOps Change'
+              
